--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is Leo Zha."
-header-img: "img/jd_lake.jpg"
+header-img: "img/jd_lake.jpeg"
 ---
 
 <!-- Language Selector -->
